--- a/OG/2/index.html
+++ b/OG/2/index.html
@@ -50,27 +50,27 @@
                 <h2>Things You Learn</h2>
                 <div class="img-container">
                     <div class="tooltip">
-                    <img src="../assets/icon-html.svg" alt="HTML">
+                    <img src="./assets/icon-html.svg" alt="HTML">
                     <span class="tooltiptext">HTML</span>
                     </div>
                     <div class="tooltip">
-                    <img src="../assets/icon-css.svg" alt="CSS">
+                    <img src="./assets/icon-css.svg" alt="CSS">
                     <span class="tooltiptext">CSS</span>
                     </div>
                     <div class="tooltip">
-                    <img src="../assets/javascript.svg" alt="JavaScript">
+                    <img src="./assets/javascript.svg" alt="JavaScript">
                     <span class="tooltiptext">JS</span>
                     </div>
                     <div class="tooltip">
-                    <img src="../assets/vscode.svg" alt="VS Code">
+                    <img src="./assets/vscode.svg" alt="VS Code">
                     <span class="tooltiptext">VSCODE</span>
                     </div>
                     <div class="tooltip">
-                    <img src="../assets/github.svg" alt="GitHub">
+                    <img src="./assets/github.svg" alt="GitHub">
                     <span class="tooltiptext">GITHUB</span>
                     </div>
                     <div class="tooltip">
-                    <img src="../assets/linkedin.svg" alt="LinkedIn">
+                    <img src="./assets/linkedin.svg" alt="LinkedIn">
                     <span class="tooltiptext">LINKEDIN</span>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
         </div>
     </div>
     <div id="content">
-        <p>For any Queries Contact: Himateju V 6366145580 & Harshith S 6363713736</p>
+        
         <!-- Placeholder content to enable scrolling -->
         <div style="height: 20vh;"></div>
     </div>
