--- a/Bug/1/index.html
+++ b/Bug/1/index.html
@@ -21,8 +21,8 @@
                 <li><a href="#">Mobies</a></li>
                 <li><a href="#">Exiperience</a></li>
                 <li><a href="#">F-Talk</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Login</a></li>
+                <li><a href="#">Aout</a></li>
+                <li><a href="#">Logn</a></li>
             </ul>
         </nav>
     </header>
